--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <p> Input Your Guess: </p>
-        <div id="slider-value"> 
-          Slider's Value:
-          ?
-        </div>  
-        <!-- Slider -->
-       <label>
-          <input id = "slider" class="mdl-slider mdl-js-slider" type="range"
-          min="1" max="6" value="2" tabindex="0"
-          onchange = "updateSliderValue(this.value)">
-        </label>
+        <!-- Numeric Textfield -->
+      <form action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="integer1">
+          <label class="mdl-textfield__label" for="integer1">Number...</label>
+          <span class="mdl-textfield__error">Input is not a number!</span>
+        </div>
+      </form>
+        <p> times...</p>
+        <!-- Numeric Textfield -->
+      <form action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="integer2">
+          <label class="mdl-textfield__label" for="integer2">Number...</label>
+          <span class="mdl-textfield__error">Input is not a number!</span>
+        </div>
+      </form>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"   
@@ -50,7 +56,7 @@
         <br>
         <br>
         <div id="user-info">
-          <div id="guess-result"></div>
+          <div id="answer"></div>
         </div>
       </main>
     </div>
