--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Number guessing game" />
+    <meta name="description" content="Multiplication Program" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Brayden Blank" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Number Guessing Game</title>
+    <title>Multiplication Program</title>
     <link rel="canonical" href="https://brayden-blank.github.io/ICS2O-Unit-5-06-HTML/" />
     <link rel="manifest" href="/ICS2O-Unit-5-06-HTML/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -17,14 +17,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>Number Guessing Game</title>
+  <title>Multiplication Program</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Number Guessing Game!</span>
+          <span class="mdl-layout-title">Multiplication Program!</span>
         </div>
       </header>
       <main class="mdl-layout__content">
